[package]
name = "leetcode"
version = "0.0.0"
authors = [
    "Gent Binaku <shekohex@gmail.com>",
    "LeetCode Rust Project Contributors",
]
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/shekohex/leetcode-rs"
description = "Learning Rust By Solving Leetcode Problems."
readme = "README.md"
publish = false
